# trading_agent

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 06_playground_option.ipynb  p_et.json  p_et_given_xt.json  p_xt.json  p_xt_given_xprevt.json  playground_option.ipynb  tesing.csv
trading_agent/: __init__.py  base_trading_agent.py  explainable_option_trading_agent.py  random_trading_agent.py  trading_simulator.py
trading_agent/utils/: order_hist_visualizer.py
